Fix Netlify deployment issues and server API key handling
- Fixed server code to properly handle missing API keys
- Updated netlify.toml with explicit build command
- Added build:frontend script for clarity
- Fixed port configuration back to 3001
- Improved error handling for Groq API initialization

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "node server/index.js",
     "dev:all": "concurrently \"npm run server\" \"vite\"",
     "build": "vite build",
+    "build:frontend": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
