--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   # Build command for the frontend
-  command = "npm run build"
+  command = "npm ci && npm run build"
   # Directory where the built files are located
   publish = "dist"
   # Functions directory
